--- a/styles/global.css
+++ b/styles/global.css
@@ -5,6 +5,10 @@
 @tailwind utilities;
 
 @layer components {
+  .container {
+    @apply max-w-7xl mx-auto px-8 lg:px-14;
+  }
+
   .gradient-canvas {
     @apply w-full h-full;
     --gradient-color-1: #ef008f;
