--- a/styles/global.css
+++ b/styles/global.css
@@ -16,4 +16,8 @@
     --gradient-color-3: #7038ff;
     --gradient-color-4: #ffba27;
   }
+
+  .sticky-transparent-navbar {
+    @apply sticky top-0 opacity-80;
+  }
 }
