--- a/styles/global.css
+++ b/styles/global.css
@@ -4,6 +4,21 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply text-gray-600 dark:text-gray-100;
+  }
+
+  h1 {
+    @apply text-8xl font-bold leading-tight;
+  }
+}
+
 @layer components {
   .container {
     @apply max-w-7xl mx-auto px-8 lg:px-14;
@@ -19,5 +34,9 @@
 
   .sticky-navbar {
     @apply sticky top-0;
+  }
+
+  .button-primary {
+    @apply font-medium text-sm rounded-3xl px-5 py-3 bg-blue-600 text-gray-100;
   }
 }
