--- a/styles/global.css
+++ b/styles/global.css
@@ -47,4 +47,12 @@
   .button-primary {
     @apply font-medium rounded-full bg-blue-600 text-gray-100;
   }
+
+  .button-secondary {
+    @apply font-semibold rounded-full bg-gray-500 text-gray-200;
+  }
+
+  .button-tertiary {
+    @apply font-medium rounded-xl border border-gray-500 text-gray-400;
+  }
 }
