--- a/styles/global.css
+++ b/styles/global.css
@@ -4,21 +4,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    @apply text-gray-100;
-  }
-
-  h1 {
-    @apply text-7xl font-bold leading-tight;
-  }
-}
-
 @layer components {
   .container {
     @apply max-w-7xl mx-auto px-8 lg:px-14;
@@ -50,5 +35,13 @@
 
   .button-tertiary {
     @apply font-medium rounded-xl border border-gray-500 text-gray-400;
+  }
+
+  .heading-primary {
+    @apply text-gray-100 text-7xl font-bold leading-tight;
+  }
+
+  .heading-secondary {
+    @apply text-gray-100 text-5xl font-bold leading-tight;
   }
 }
